# Baja

./: .gitignore  CMakeLists.txt  build_and_run.sh  code_dump.md  debug_code.txt  plot_results.py  plot_trajectory.py  run_and_copy.sh  run_trajectory.sh
include/: base_controller.h  pid_controller.h  pure_pursuit_controller.h  stanley_controller.h
src/: main.cpp  pid_controller.cpp  pure_pursuit_controller.cpp  stanley_controller.cpp
tests/: mock_path_generator.cpp  mock_path_generator.cpp.backup  mock_path_generator.h  mock_path_generator.h.backup
